# controller/sys_dict.go
@@ -31,19 +31,19 @@ func NewDictController(sysDictService *service.SysDictService) *DictController {
 // @Produce application/json
 // @Param Authorization header string false "Bearer 用户令牌"
 // @Param id path int true "字典ID"
-// @Success 200 {object} middlewares.Response "请求成功"
-// @Router /dist/id/{id} [get]
+// @Success 200 {object} response.Response "请求成功"
+// @Router /dict/id/{id} [get]
 func (t *DictController) GetSysDictById(ctx *gin.Context) {
 	id, err := strconv.Atoi(ctx.Param("id"))
 	resp := response.NewResponse()
 	ctx.Set("response", resp)
 	if err != nil {
-		resp.SetMsg(err.Error()).SetCode(http.StatusBadRequest)
+		resp.SetErrorMessage(err.Error()).SetErrorCode(http.StatusBadRequest)
 		return
 	}
 	data, err := t.sysDictService.GetSysDictById(id)
 	if err != nil {
-		resp.SetMsg(err.Error()).SetCode(http.StatusInternalServerError)
+		resp.SetErrorMessage(err.Error()).SetErrorCode(http.StatusInternalServerError)
 		return
 	}
 	resp.SetData(data)
@@ -57,15 +57,15 @@ func (t *DictController) GetSysDictById(ctx *gin.Context) {
 // @Produce application/json
 // @Param Authorization header string false "Bearer 用户令牌"
 // @Param code path string true "字典CODE"
-// @Success 200 {object} middlewares.Response "请求成功"
-// @Router /dist/code/{code} [get]
+// @Success 200 {object} response.Response "请求成功"
+// @Router /dict/code/{code} [get]
 func (t *DictController) GetSysDictByCode(ctx *gin.Context) {
 	resp := response.NewResponse()
 	ctx.Set("response", resp)
 	code := ctx.Param("code")
 	data, err := t.sysDictService.GetSysDictByCode(code)
 	if err != nil {
-		resp.SetMsg(err.Error()).SetCode(http.StatusInternalServerError)
+		resp.SetErrorMessage(err.Error()).SetErrorCode(http.StatusInternalServerError)
 		return
 	}
 	resp.SetData(data)
@@ -77,12 +77,12 @@ func (t *DictController) QuerySysDict(ctx *gin.Context) {
 	ctx.Set("response", resp)
 	var data request.Basic
 	if err := ctx.ShouldBindQuery(&data); err != nil {
-		resp.SetCode(http.StatusInternalServerError).SetMsg(err.Error())
+		resp.SetErrorCode(http.StatusInternalServerError).SetErrorMessage(err.Error())
 		return
 	}
 	result, err := t.sysDictService.GetSysDictList(data)
 	if err != nil {
-		resp.SetCode(http.StatusInternalServerError).SetMsg(err.Error())
+		resp.SetErrorCode(http.StatusInternalServerError).SetErrorMessage(err.Error())
 		return
 	}
 	resp.SetData(result.Data).SetTotal(result.Total)
@@ -95,12 +95,12 @@ func (t *DictController) InsertSysDict(ctx *gin.Context) {
 	var dictCreateReq request.DictCreateReq
 	err := ctx.ShouldBindJSON(&dictCreateReq)
 	if err != nil {
-		resp.SetCode(http.StatusBadRequest).SetMsg(err.Error())
+		resp.SetErrorCode(http.StatusBadRequest).SetErrorMessage(err.Error())
 		return
 	}
 	err = t.sysDictService.InsertSysDict(dictCreateReq)
 	if err != nil {
-		resp.SetCode(http.StatusBadRequest).SetMsg(err.Error())
+		resp.SetErrorCode(http.StatusBadRequest).SetErrorMessage(err.Error())
 		return
 	}
 	return
@@ -112,12 +112,12 @@ func (t *DictController) UpdateSysDict(ctx *gin.Context) {
 	var dictUpdateReq request.DictUpdateReq
 	err := ctx.ShouldBindJSON(&dictUpdateReq)
 	if err != nil {
-		resp.SetCode(http.StatusBadRequest).SetMsg(err.Error())
+		resp.SetErrorCode(http.StatusBadRequest).SetErrorMessage(err.Error())
 		return
 	}
 	err = t.sysDictService.UpdateSysDict(dictUpdateReq)
 	if err != nil {
-		resp.SetCode(http.StatusBadRequest).SetMsg(err.Error())
+		resp.SetErrorCode(http.StatusBadRequest).SetErrorMessage(err.Error())
 		return
 	}
 	return
@@ -128,12 +128,12 @@ func (t *DictController) DeleteSysDictById(ctx *gin.Context) {
 	ctx.Set("response", resp)
 	id, err := strconv.Atoi(ctx.Param("id"))
 	if err != nil {
-		resp.SetCode(http.StatusInternalServerError).SetMsg(err.Error())
+		resp.SetErrorCode(http.StatusInternalServerError).SetErrorMessage(err.Error())
 		return
 	}
 	err = t.sysDictService.DeleteSysDictById(id)
 	if err != nil {
-		resp.SetCode(http.StatusInternalServerError).SetMsg(err.Error())
+		resp.SetErrorCode(http.StatusInternalServerError).SetErrorMessage(err.Error())
 		return
 	}
 	return
@@ -145,12 +145,12 @@ func (t *DictController) GetSysDictItemById(ctx *gin.Context) {
 	resp := response.NewResponse()
 	ctx.Set("response", resp)
 	if err != nil {
-		resp.SetMsg(err.Error()).SetCode(http.StatusBadRequest)
+		resp.SetErrorMessage(err.Error()).SetErrorCode(http.StatusBadRequest)
 		return
 	}
 	data, err := t.sysDictService.GetSysDictItemById(id)
 	if err != nil {
-		resp.SetMsg(err.Error()).SetCode(http.StatusInternalServerError)
+		resp.SetErrorMessage(err.Error()).SetErrorCode(http.StatusInternalServerError)
 		return
 	}
 	resp.SetData(data)
@@ -162,12 +162,12 @@ func (t *DictController) GetSysDictItemsByDictId(ctx *gin.Context) {
 	ctx.Set("response", resp)
 	id, err := strconv.Atoi(ctx.Param("id"))
 	if err != nil {
-		resp.SetMsg(err.Error()).SetCode(http.StatusBadRequest)
+		resp.SetErrorMessage(err.Error()).SetErrorCode(http.StatusBadRequest)
 		return
 	}
 	result, err := t.sysDictService.GetSysDictItemsByDictId(id)
 	if err != nil {
-		resp.SetCode(http.StatusInternalServerError).SetMsg(err.Error())
+		resp.SetErrorCode(http.StatusInternalServerError).SetErrorMessage(err.Error())
 		return
 	}
 	resp.SetData(result)
@@ -180,12 +180,12 @@ func (t *DictController) InsertSysDictItem(ctx *gin.Context) {
 	var dictItemCreateReq request.DictItemCreateReq
 	err := ctx.ShouldBindJSON(&dictItemCreateReq)
 	if err != nil {
-		resp.SetCode(http.StatusBadRequest).SetMsg(err.Error())
+		resp.SetErrorCode(http.StatusBadRequest).SetErrorMessage(err.Error())
 		return
 	}
 	err = t.sysDictService.InsertSysDictItem(dictItemCreateReq)
 	if err != nil {
-		resp.SetCode(http.StatusBadRequest).SetMsg(err.Error())
+		resp.SetErrorCode(http.StatusBadRequest).SetErrorMessage(err.Error())
 		return
 	}
 	return
@@ -197,12 +197,12 @@ func (t *DictController) UpdateSysDictItem(ctx *gin.Context) {
 	var dictItemUpdateReq request.DictItemUpdateReq
 	err := ctx.ShouldBindJSON(&dictItemUpdateReq)
 	if err != nil {
-		resp.SetCode(http.StatusBadRequest).SetMsg(err.Error())
+		resp.SetErrorCode(http.StatusBadRequest).SetErrorMessage(err.Error())
 		return
 	}
 	err = t.sysDictService.UpdateSysDictItem(dictItemUpdateReq)
 	if err != nil {
-		resp.SetCode(http.StatusBadRequest).SetMsg(err.Error())
+		resp.SetErrorCode(http.StatusBadRequest).SetErrorMessage(err.Error())
 		return
 	}
 	return
@@ -213,12 +213,12 @@ func (t *DictController) DeleteSysDictItemById(ctx *gin.Context) {
 	ctx.Set("response", resp)
 	id, err := strconv.Atoi(ctx.Param("id"))
 	if err != nil {
-		resp.SetCode(http.StatusInternalServerError).SetMsg(err.Error())
+		resp.SetErrorCode(http.StatusInternalServerError).SetErrorMessage(err.Error())
 		return
 	}
 	err = t.sysDictService.DeleteSysDictItemById(id)
 	if err != nil {
-		resp.SetCode(http.StatusInternalServerError).SetMsg(err.Error())
+		resp.SetErrorCode(http.StatusInternalServerError).SetErrorMessage(err.Error())
 		return
 	}
 	return
