# docs/swagger.json
@@ -11,9 +11,9 @@
     },
     "basePath": "/sweet/admin",
     "paths": {
-        "/dist/code/{code}": {
+        "/dict/code/{code}": {
             "get": {
-                "description": "根据ID获取字典详情",
+                "description": "根据CODE获取字典详情",
                 "produces": [
                     "application/json"
                 ],
@@ -29,7 +29,7 @@
                         "in": "header"
                     },
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "字典CODE",
                         "name": "code",
                         "in": "path",
@@ -40,13 +40,13 @@
                     "200": {
                         "description": "请求成功",
                         "schema": {
-                            "$ref": "#/definitions/middlewares.Response"
+                            "$ref": "#/definitions/sweet-cms_form_response.Response"
                         }
                     }
                 }
             }
         },
-        "/dist/id/{id}": {
+        "/dict/id/{id}": {
             "get": {
                 "description": "根据ID获取字典详情",
                 "produces": [
@@ -75,7 +75,7 @@
                     "200": {
                         "description": "请求成功",
                         "schema": {
-                            "$ref": "#/definitions/middlewares.Response"
+                            "$ref": "#/definitions/sweet-cms_form_response.Response"
                         }
                     }
                 }
@@ -83,15 +83,18 @@
         }
     },
     "definitions": {
-        "middlewares.Response": {
+        "sweet-cms_form_response.Response": {
             "type": "object",
             "properties": {
-                "code": {
+                "data": {},
+                "error_code": {
                     "type": "integer"
                 },
-                "data": {},
-                "msg": {
+                "error_message": {
                     "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
                 },
                 "total": {
                     "type": "integer"
